# liquid-democracy

./: README.md
backend/: Cargo.toml
backend/src/: common_data.rs  main.rs  network_data.rs  vote_store.rs
backend/src/extensions/: auth_state.rs  data_context.rs  mod.rs
backend/src/middlewares/: authentication_middleware.rs  mod.rs
backend/src/routes/: login.rs  logout.rs  mod.rs  parties.rs  poll.rs  poll_results.rs  polls.rs  profile.rs  username.rs  vote.rs
backend/src/utils/: response.rs
database/: drop.sql  init.sql  populate.sql  rebuild.sh
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  index.js
frontend/src/app/: App.css  App.js  LogInView.js  LoggedInView.js  TopBar.js
frontend/src/components/: Chart.css  Chart.jsx  Timer.jsx
frontend/src/contexts/: partiesContext.js  pollContext.js  pollsContext.js  profileContext.js  visibilityContext.js  votingContext.js
frontend/src/effects/: useApiUrl.js
frontend/src/pages/home/: Home.jsx  PollCard.css  PollCard.jsx  SearchBar.css  SearchBar.jsx  StatisticsLabel.jsx  VotingButtons.css  VotingButtons.jsx
frontend/src/pages/landing/: Landing.jsx
frontend/src/pages/poll/: Poll.jsx
