[package]
name = "liquid_democracy"
version = "0.1.0"
authors = ["Tomasz Rewak <tomasz.rewak@gmail.com>"]
edition = "2021"

[dependencies]
axum = "0.6.18"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
