[package]
name = "liquid_democracy"
version = "0.1.0"
authors = ["Tomasz Rewak <tomasz.rewak@gmail.com>"]
edition = "2021"

[dependencies]
axum = "0.6.18"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tokio-postgres = "0.7.8"
bb8-postgres = "0.8.1"
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
cookie = "0.17.0"